--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,23 @@
-version: '3.3'
+version: '3.8'
+
 services:
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+     - /var/lib/postgresql/data/
+    env_file:
+      - ../backend/foodgram/.env
+  
+  backend:
+    build: ../backend/foodgram
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+    - ../backend/foodgram/.env
 
   frontend:
     build:
@@ -8,10 +26,19 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
+      - static_value:/static/
+      - media_value:/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+    restart: always
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
