--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,7 +9,9 @@ services:
       - ../backend/foodgram/.env
   
   backend:
-    build: ../backend/foodgram
+    build:
+      context: ../backend/foodgram
+      dockerfile: Dockerfile
     restart: always
     volumes:
       - static_value:/app/static/
@@ -26,7 +28,7 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
   nginx:
-    image: nginx:1.21.3-alpine
+    image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
@@ -39,6 +41,5 @@ services:
     restart: always
 
 volumes:
-  postgres_data:
   static_value:
   media_value:
