--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,15 +4,15 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-     - /var/lib/postgresql/data/
+     -postgres_data:/var/lib/postgresql/data/
     env_file:
       - ../backend/foodgram/.env
+    restart: always
   
   backend:
-    build:
-      context: ../backend/foodgram
-      dockerfile: Dockerfile
+    image: artemhub/foodgram:latest
     restart: always
+
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -21,16 +21,16 @@ services:
     env_file:
     - ../backend/foodgram/.env
 
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+  ffrontend:
+    image: artemhub/foodgram:latest
+
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - static_value:/static/
       - media_value:/media/
@@ -41,5 +41,6 @@ services:
     restart: always
 
 volumes:
+  postgres_data:
   static_value:
   media_value:
