--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -108,6 +108,8 @@ jobs:
             sudo docker compose pull frontend
             
             sudo docker compose up -d --build
+            sudo docker-compose exec -T web python manage.py migrate --noinput
+            sudo docker-compose exec -T web python manage.py collectstatic --no-input
   send_message:
     name: Send Telegram message
     runs-on: ubuntu-latest
