--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -100,14 +100,14 @@ jobs:
             sudo echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             sudo echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             
-            sudo docker compose stop
+            sudo docker-compose stop
             
-            sudo docker compose rm backend
-            sudo docker compose pull backend
-            sudo docker compose rm frontend
-            sudo docker compose pull frontend
+            sudo docker-compose rm backend
+            sudo docker-compose pull backend
+            sudo docker-compose rm frontend
+            sudo docker-compose pull frontend
             
-            sudo docker compose up -d --build
+            sudo docker-compose up -d --build
             sudo docker-compose exec -T web python manage.py migrate --noinput
             sudo docker-compose exec -T web python manage.py collectstatic --no-input
   send_message:
