--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -88,8 +88,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/fronted:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram:v2
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/fronted:v1
             sudo docker-compose stop
             sudo docker-compose rm backend
             touch .env
