--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -28,10 +28,10 @@ services:
   nginx:
     image: nginx:1.19.3
     ports:
-      - "8080:80"
+      - "8080:8080"
     volumes:
-      - static_value:/static/
-      - media_value:/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
