--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
