new compose and nginx

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,18 +1,15 @@
 server {
-
-    server_tokens off;
-
     listen 80;
-
+    server_tokens off;
     server_name 51.250.104.214;
 
     location /media/ {
         autoindex on;
-        alias /media/;
+        alias /var/html/media/;
     }
-    location /static/admin/ {
+    location /static/ {
         autoindex on;
-        alias /static/admin/;
+        alias /var/html/static/;
     }
     location /static/rest_framework/ {
         root /var/html;
