--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -2,7 +2,8 @@ name: foodgram_workflow
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
     paths-ignore:
       - '**/README.md'
 
@@ -46,7 +47,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./backend/foodgram
+          context: ./backend/foodgram/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:v2
 
@@ -68,7 +69,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./frontend
+          context: ./frontend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/fronted:v1
 
