--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,11 +3,12 @@ version: '3.8'
 services:
   db:
     image: postgres:13.0-alpine
+    container_name: postgresql
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./backend/foodgram/.env
     restart: always
+    env_file:
+      - ./.env
   
   backend:
     image: artemhub/foodgram:v2
@@ -18,7 +19,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./backend/foodgram/.env
+      - ./.env
 
   frontend:
     image: artemhub/fronted:v1
@@ -28,15 +29,17 @@ services:
   nginx:
     image: nginx:1.21.3
     ports:
-      - "8080:80"
+      - '80:80'
     volumes:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-    restart: always
+    depends_on:
+      - backend
+      - frontend
 
 volumes:
   postgres_data:
