--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./backend/foodgram/
+          context: backend/foodgram/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:v2
 
@@ -69,7 +69,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./frontend/
+          context: frontend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/fronted:v1
 
