--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,7 +11,9 @@ services:
     restart: always
 
   backend:
-    image: artemhub/foodgram:v2
+    build:
+      context: ../backend/foodgram 
+      dockerfile: Dockerfile
     restart: always
     volumes:
       - static_value:/app/static/
